# Hunter_Diff2Ackermann

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
ackermann_bridge_ws/src/ackermann_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ackermann_bridge_ws/src/ackermann_bridge/ackermann_bridge/: control_transformer.py
ackermann_bridge_ws/src/ackermann_bridge/config/: ackerman_bridge.service
ackermann_bridge_ws/src/ackermann_bridge/launch/: bridge.launch.py  bridge_wrapper.sh
